--- a/RESTfulBlogApp/views/index.ejs
+++ b/RESTfulBlogApp/views/index.ejs
@@ -1,3 +1,6 @@
+<% include ./partials/header %>
+
+
 <h1>Index Page!!</h1>
 
 <% blogs.forEach(function(blog){ %>
@@ -11,3 +14,5 @@
 
 
 <% }) %>
+
+<% include ./partials/footer %>
