--- a/RESTfulBlogApp/views/edit.ejs
+++ b/RESTfulBlogApp/views/edit.ejs
@@ -2,15 +2,15 @@
 
 
 <div class="ui main text container segment">
-    <div class="ui huge header">New Blog</div>
+    <div class="ui huge header">Edit <%=blog.title%></div>
     <form class="ui form" action="/blogs" method="POST">
         <div class="field">
             <label>Title</label>
-            <input type="text" name="blog[title]" placeholder="title">
+            <input type="text" name="blog[title]" value="<%=blog.title%>">
         </div>
         <div class="field">
             <label>Image</label>
-            <input type="text" name="blog[image]" placeholder="image">
+            <input type="text" name="blog[image]" placeholder="<%=blog.image%>">
         </div>
         <div class="field">
             <label>Blog Content</label>
