--- a/RESTfulBlogApp/views/new.ejs
+++ b/RESTfulBlogApp/views/new.ejs
@@ -3,7 +3,7 @@
 
 <div class="ui main text container segment">
     <div class="ui huge header">New Blog</div>
-    <form class="ui form" action="/blogs/<%=blog._id%>" method="PUT">
+    <form class="ui form" action="/blogs" method="POST">
         <div class="field">
             <label>Title</label>
             <input type="text" name="blog[title]" placeholder="title">
