--- a/RESTfulBlogApp/views/show.ejs
+++ b/RESTfulBlogApp/views/show.ejs
@@ -12,6 +12,9 @@
             <div class="description">
                 <p><%=blog.body%></p>
             </div>
+            <form action="/blogs/<%=blog._id%>?_method=DELETE" method="POST">
+                
+            </form>
         </div>
     </div>
     
